<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.justjava.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:imeOptions="actionDone"
            android:inputType="textCapWords"
            android:padding="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/toppings"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="16sp" />


        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:onClick="checker"
            android:paddingLeft="24sp"
            android:text="@string/cream"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkboxChocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:onClick="checkerChocolate"
            android:paddingLeft="24sp"
            android:text="@string/chocolate"
            android:textSize="16sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/quantity"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:onClick="submitOrderplus"
                android:text="+"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8sp"
                android:text="@string/quantityNo"
                android:textColor="#000"
                android:textSize="16sp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:onClick="submitOrderminus"
                android:text="-"
                android:textSize="18sp" />
        </LinearLayout>



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:onClick="submitOrder"
            android:text="@string/orderbutt" />


    </LinearLayout>
</ScrollView>